modif des extensions

--- a/DMZ/VOIP/config/extensions.conf
+++ b/DMZ/VOIP/config/extensions.conf
@@ -1,5 +1,5 @@
 ; --- dirceteur ---
-[1]
+[directeur-context]
 exten => 1,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
 same => n,VoiceMail(${EXTEN}@secretariatvm)
@@ -17,7 +17,7 @@ exten => 250,1,Goto(hangar,${EXTEN},1)
 exten => 100,1,Goto(commerciaux,${EXTEN},1)
 
 ; --- secretariat ---
-[50]
+[secretaire-contexte]
 exten => 50,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
 same => n,VoiceMail(${EXTEN}@directeurvm)
@@ -36,7 +36,7 @@ exten => 100,1,Goto(commerciaux,${EXTEN},1)
 
 
 ; --- comptabilite ---
-[150]
+[comptabilite-contexte]
 exten => 150,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
 same => n,VoiceMail(${EXTEN}@comptabilitevm)
@@ -55,7 +55,7 @@ exten => 100,1,Goto(commerciaux,${EXTEN},1)
 
 
 ; --- atelier ---
-[200]
+[atelier-context]
 exten => 200,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
 same => n,VoiceMail(${EXTEN}@ateliervm)
@@ -73,7 +73,7 @@ exten => 250,1,Goto(hangar,${EXTEN},1)
 exten => 100,1,Goto(commerciaux,${EXTEN},1)
 
 ; --- commerciaux ---
-[100]
+[commerciaux-context]
 exten => 200,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
 same => n,VoiceMail(${EXTEN}@commerciauxvm)
@@ -90,7 +90,7 @@ exten => 150,1,Goto(comptabilite,${EXTEN},1)
 exten => 250,1,Goto(hangar,${EXTEN},1)
 
 ; --- hangar ---
-[250]
+[hangar-context]
 exten => 200,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
 same => n,VoiceMail(${EXTEN}@hangarvm)
