--- a/DMZ/VOIP/config/voicemail.conf
+++ b/DMZ/VOIP/config/voicemail.conf
@@ -14,19 +14,19 @@ sendvoicemail=yes
 maxlogins=3     
 
 [secretariatvm]
-secretariat => [MOGymPtOrKhA],secretariat
+secretariat => [9876],secretariat
 
 [directeurvm]
-directeur => [iTonTAtERViC],directeur
+directeur => [9876],directeur
 
 [comptabilitevm]
-comptabilite => [AFkFapKWahck],comptabilite
+comptabilite => [9876],comptabilite
 
 [ateliervm]
-atelier => [dKsQnnqDzRKS],atelier
+atelier => [9876],atelier
 
 [hangarvm]
-hangar => [GlACEntIVent],hangar
+hangar => [9876],hangar
 
 [commerciauxvm]
-commerciaux => [RESIOuranDER],commerciaux
+commerciaux => [9876],commerciaux
