--- a/DMZ/VOIP/config/sip.conf
+++ b/DMZ/VOIP/config/sip.conf
@@ -3,6 +3,6 @@ language=fr
 bindport=5060
 bindaddr=0.0.0.0
 srvlookup=yes
-nat=force_rport,comedia
+nat=force_rport
 localnet=192.168.1.0/255.255.255.0
 externip=176.96.231.177
