--- a/DMZ/VOIP/config/extensions.conf
+++ b/DMZ/VOIP/config/extensions.conf
@@ -1,16 +1,16 @@
 ; --- dirceteur ---
-[directeur-context]
+[directeur-contexte]
 exten => 1,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
-same => n,VoiceMail(${EXTEN}@secretariatvm)
+same => n,VoiceMail(${EXTEN}@directeurvm)
 same => n,Hangup
 
-; secretariat access voicemail
-exten => *50,1,VoiceMailMain(50@secretariatvm)      ;checkvoicemail
+; directeur access voicemail
+exten => *50,1,VoiceMailMain(50@directeurvm)      ;checkvoicemail
 same => n,Hangup
 
 ;allow other extensions
-exten => 50,1,Goto(directeur,${EXTEN},1)
+exten => 50,1,Goto(secretariat,${EXTEN},1)
 exten => 150,1,Goto(comptabilite,${EXTEN},1)
 exten => 200,1,Goto(atelier,${EXTEN},1)
 exten => 250,1,Goto(hangar,${EXTEN},1)
@@ -20,15 +20,15 @@ exten => 100,1,Goto(commerciaux,${EXTEN},1)
 [secretaire-contexte]
 exten => 50,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
-same => n,VoiceMail(${EXTEN}@directeurvm)
+same => n,VoiceMail(${EXTEN}@secretariatvm)
 same => n,Hangup
 
-; directeur access voicemail
-exten => *100,1,VoiceMailMain(100@directeurvm)      ;checkvoicemail
+; secretariat access voicemail
+exten => *50,1,VoiceMailMain(100@secretariatvm)      ;checkvoicemail
 same => n,Hangup
 
 ;allow other extensions
-exten => 1,1,Goto(secretariat,${EXTEN},1)
+exten => 1,1,Goto(directeur,${EXTEN},1)
 exten => 150,1,Goto(comptabilite,${EXTEN},1)
 exten => 200,1,Goto(atelier,${EXTEN},1)
 exten => 250,1,Goto(hangar,${EXTEN},1)
@@ -47,15 +47,15 @@ exten => *150,1,VoiceMailMain(150@comptabilitevm)      ;checkvoicemail
 same => n,Hangup
 
 ;allow other extensions
-exten => 1,1,Goto(secretariat,${EXTEN},1)
-exten => 50,1,Goto(directeur,${EXTEN},1)
+exten => 1,1,Goto(directeur,${EXTEN},1)
+exten => 50,1,Goto(secretariat,${EXTEN},1)
 exten => 200,1,Goto(atelier,${EXTEN},1)
 exten => 250,1,Goto(hangar,${EXTEN},1)
 exten => 100,1,Goto(commerciaux,${EXTEN},1)
 
 
 ; --- atelier ---
-[atelier-context]
+[atelier-contexte]
 exten => 200,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
 same => n,VoiceMail(${EXTEN}@ateliervm)
@@ -66,15 +66,15 @@ exten => *200,1,VoiceMailMain(200@ateliervm)      ;checkvoicemail
 same => n,Hangup
 
 ;allow other extensions
-exten => 1,1,Goto(secretariat,${EXTEN},1)
-exten => 50,1,Goto(directeur,${EXTEN},1)
+exten => 1,1,Goto(directeur,${EXTEN},1)
+exten => 50,1,Goto(secretariat,${EXTEN},1)
 exten => 150,1,Goto(comptabilite,${EXTEN},1)
 exten => 250,1,Goto(hangar,${EXTEN},1)
 exten => 100,1,Goto(commerciaux,${EXTEN},1)
 
 ; --- commerciaux ---
-[commerciaux-context]
-exten => 200,1,Answer
+[commerciaux-contexte]
+exten => 100,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
 same => n,VoiceMail(${EXTEN}@commerciauxvm)
 same => n,Hangup
@@ -84,13 +84,13 @@ exten => *100,1,VoiceMailMain(200@commerciauxvm)      ;checkvoicemail
 same => n,Hangup
 
 ;allow other extensions
-exten => 1,1,Goto(secretariat,${EXTEN},1)
-exten => 50,1,Goto(directeur,${EXTEN},1)
+exten => 1,1,Goto(directeur,${EXTEN},1)
+exten => 50,1,Goto(secretariat,${EXTEN},1)
 exten => 150,1,Goto(comptabilite,${EXTEN},1)
 exten => 250,1,Goto(hangar,${EXTEN},1)
 
 ; --- hangar ---
-[hangar-context]
+[hangar-contexte]
 exten => 200,1,Answer
 same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
 same => n,VoiceMail(${EXTEN}@hangarvm)
@@ -101,7 +101,7 @@ exten => *250,1,VoiceMailMain(200@hangarvm)      ;checkvoicemail
 same => n,Hangup
 
 ;allow other extensions
-exten => 1,1,Goto(secretariat,${EXTEN},1)
-exten => 50,1,Goto(directeur,${EXTEN},1)
+exten => 1,1,Goto(directeur,${EXTEN},1)
+exten => 50,1,Goto(secretariat,${EXTEN},1)
 exten => 150,1,Goto(comptabilite,${EXTEN},1)
 exten => 100,1,Goto(commerciaux,${EXTEN},1)
