--- a/DMZ/VOIP/config/extensions.conf
+++ b/DMZ/VOIP/config/extensions.conf
@@ -1,107 +1,98 @@
-; --- dirceteur ---
-[directeur-contexte]
-exten => 1,1,Answer
-same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
-same => n,VoiceMail(${EXTEN}@directeurvm)
-same => n,Hangup
+[directeur-context]
 
-; directeur access voicemail
-exten => *50,1,VoiceMailMain(50@directeurvm)      ;checkvoicemail
-same => n,Hangup
+exten => 1,1,Dial(SIP/directeur,20)
+exten => 1,2,VoiceMail(1@directeurvm,u)
+exten => 1,3,Hangup
 
-;allow other extensions
-exten => 50,1,Goto(secretariat,${EXTEN},1)
-exten => 150,1,Goto(comptabilite,${EXTEN},1)
-exten => 200,1,Goto(atelier,${EXTEN},1)
-exten => 250,1,Goto(hangar,${EXTEN},1)
-exten => 100,1,Goto(commerciaux,${EXTEN},1)
+exten => *1,1,VoiceMailMain(1@directeurvm)
+exten => n,2,Hangup
 
-; --- secretariat ---
-[secretaire-contexte]
-exten => 50,1,Answer
-same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
-same => n,VoiceMail(${EXTEN}@secretariatvm)
-same => n,Hangup
-
-; secretariat access voicemail
-exten => *50,1,VoiceMailMain(100@secretariatvm)      ;checkvoicemail
-same => n,Hangup
-
-;allow other extensions
-exten => 1,1,Goto(directeur,${EXTEN},1)
-exten => 150,1,Goto(comptabilite,${EXTEN},1)
-exten => 200,1,Goto(atelier,${EXTEN},1)
-exten => 250,1,Goto(hangar,${EXTEN},1)
-exten => 100,1,Goto(commerciaux,${EXTEN},1)
+exten => 50,1,Goto(secretaire-context,${EXTEN},1)
+exten => 200,1,Goto(atelier-context,${EXTEN},1)
+exten => 250,1,Goto(hangar-context,${EXTEN},1)
+exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
+exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
 
 
-; --- comptabilite ---
+
+[secretaire-context]
+
+exten => 50,1,Dial(SIP/secretaire,20)
+exten => 50,2,VoiceMail(500@secretariatvm,u)
+exten => 50,3,Hangup
+
+exten => *50,1,VoiceMailMain(50@secretariatvm)
+exten => n,2,Hangup
+
+exten => 1,1,Goto(directeur-context,${EXTEN},1)
+exten => 200,1,Goto(atelier-context,${EXTEN},1)
+exten => 250,1,Goto(hangar-context,${EXTEN},1)
+exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
+exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
+
+
+
+[atelier-context]
+
+exten => 200,1,Dial(SIP/atelier,20)
+exten => 200,2,VoiceMail(200@ateliervm,u)
+exten => 200,3,Hangup
+
+exten => *200,1,VoiceMailMain(200@ateliervm)
+exten => n,2,Hangup
+
+exten => 50,1,Goto(secretaire-context,${EXTEN},1)
+exten => 50,1,Goto(secretaire-context,${EXTEN},1)
+exten => 250,1,Goto(hangar-context,${EXTEN},1)
+exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
+exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
+
+
+
+[hangar-context]
+
+exten => 250,1,Dial(SIP/hangar,20)
+exten => 250,2,VoiceMail(200@hangarvm,u)
+exten => 250,3,Hangup
+
+exten => *250,1,VoiceMailMain(200@hangarvm)
+exten => n,2,Hangup
+
+exten => 50,1,Goto(secretaire-context,${EXTEN},1)
+exten => 50,1,Goto(secretaire-context,${EXTEN},1)
+exten => 200,1,Goto(atelier-context,${EXTEN},1)
+exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
+exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
+
+
 [comptabilite-contexte]
-exten => 150,1,Answer
-same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
-same => n,VoiceMail(${EXTEN}@comptabilitevm)
-same => n,Hangup
-;relir cdc + faire une queue(contable 1,2)
-; comptabilite access voicemail
-exten => *150,1,VoiceMailMain(150@comptabilitevm)      ;checkvoicemail
-same => n,Hangup
 
-;allow other extensions
-exten => 1,1,Goto(directeur,${EXTEN},1)
-exten => 50,1,Goto(secretariat,${EXTEN},1)
-exten => 200,1,Goto(atelier,${EXTEN},1)
-exten => 250,1,Goto(hangar,${EXTEN},1)
-exten => 100,1,Goto(commerciaux,${EXTEN},1)
+exten => 150,1,Dial(SIP/comptable,20)
+exten => 150,2,VoiceMail(250@comptabilitevm,u)
+exten => 150,3,Hangup
+
+exten => *150,1,VoiceMailMain(250@comptabilitevm)
+exten => n,2,Hangup
+
+exten => 50,1,Goto(secretaire-context,${EXTEN},1)
+exten => 50,1,Goto(secretaire-context,${EXTEN},1)
+exten => 200,1,Goto(atelier-context,${EXTEN},1)
+exten => 250,1,Goto(hangar-context,${EXTEN},1)
+exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
 
 
-; --- atelier ---
-[atelier-contexte]
-exten => 200,1,Answer
-same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
-same => n,VoiceMail(${EXTEN}@ateliervm)
-same => n,Hangup
 
-; atelier access voicemail
-exten => *200,1,VoiceMailMain(200@ateliervm)      ;checkvoicemail
-same => n,Hangup
+[commerciaux-context]
 
-;allow other extensions
-exten => 1,1,Goto(directeur,${EXTEN},1)
-exten => 50,1,Goto(secretariat,${EXTEN},1)
-exten => 150,1,Goto(comptabilite,${EXTEN},1)
-exten => 250,1,Goto(hangar,${EXTEN},1)
-exten => 100,1,Goto(commerciaux,${EXTEN},1)
+exten => 100,1,Dial(SIP/commercial,20)
+exten => 100,2,VoiceMail(100@commerciauxvm,u)
+exten => 100,3,Hangup
 
-; --- commerciaux ---
-[commerciaux-contexte]
-exten => 100,1,Answer
-same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
-same => n,VoiceMail(${EXTEN}@commerciauxvm)
-same => n,Hangup
+exten => *100,1,VoiceMailMain(100@commerciauxvm)
+exten => n,2,Hangup
 
-; commerciaux access voicemail
-exten => *100,1,VoiceMailMain(200@commerciauxvm)      ;checkvoicemail
-same => n,Hangup
-
-;allow other extensions
-exten => 1,1,Goto(directeur,${EXTEN},1)
-exten => 50,1,Goto(secretariat,${EXTEN},1)
-exten => 150,1,Goto(comptabilite,${EXTEN},1)
-exten => 250,1,Goto(hangar,${EXTEN},1)
-
-; --- hangar ---
-[hangar-contexte]
-exten => 200,1,Answer
-same => n,Dial(SIP/${EXTEN},15)     ;Dial(type/identifier, timeout, options, URL)fo
-same => n,VoiceMail(${EXTEN}@hangarvm)
-same => n,Hangup
-
-; hangar access voicemail
-exten => *250,1,VoiceMailMain(200@hangarvm)      ;checkvoicemail
-same => n,Hangup
-
-;allow other extensions
-exten => 1,1,Goto(directeur,${EXTEN},1)
-exten => 50,1,Goto(secretariat,${EXTEN},1)
-exten => 150,1,Goto(comptabilite,${EXTEN},1)
-exten => 100,1,Goto(commerciaux,${EXTEN},1)
+exten => 50,1,Goto(secretaire-context,${EXTEN},1)
+exten => 50,1,Goto(secretaire-context,${EXTEN},1)
+exten => 200,1,Goto(atelier-context,${EXTEN},1)
+exten => 250,1,Goto(hangar-context,${EXTEN},1)
+exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
