--- a/DMZ/VOIP/config/extensions.conf
+++ b/DMZ/VOIP/config/extensions.conf
@@ -1,4 +1,4 @@
-[directeur-context]
+[directeur-contexte]
 
 exten => 1,1,Dial(SIP/directeur,20)
 exten => 1,2,VoiceMail(1@directeurvm,u)
@@ -15,7 +15,7 @@ exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
 
 
 
-[secretaire-context]
+[secretaire-contexte]
 
 exten => 50,1,Dial(SIP/secretaire,20)
 exten => 50,2,VoiceMail(500@secretariatvm,u)
@@ -32,7 +32,7 @@ exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
 
 
 
-[atelier-context]
+[atelier-contexte]
 
 exten => 200,1,Dial(SIP/atelier,20)
 exten => 200,2,VoiceMail(200@ateliervm,u)
@@ -49,7 +49,7 @@ exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
 
 
 
-[hangar-context]
+[hangar-contexte]
 
 exten => 250,1,Dial(SIP/hangar,20)
 exten => 250,2,VoiceMail(200@hangarvm,u)
@@ -82,7 +82,7 @@ exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
 
 
 
-[commerciaux-context]
+[commerciaux-contexte]
 
 exten => 100,1,Dial(SIP/commercial,20)
 exten => 100,2,VoiceMail(100@commerciauxvm,u)
