modification des extensions

--- a/DMZ/VOIP/config/extensions.conf
+++ b/DMZ/VOIP/config/extensions.conf
@@ -1,11 +1,12 @@
 [directeur-contexte]
-
 exten => 1,1,Dial(SIP/directeur,20)
-exten => 1,2,VoiceMail(1@directeurvm,u)
+exten => 1,2,VoiceMail(1@directeurvm)
 exten => 1,3,Hangup
 
-exten => *1,1,VoiceMailMain(1@directeurvm)
-exten => n,2,Hangup
+
+exten => 2,1,Answer()
+exten => 2,2,VoiceMailMain(1@directeurvm)
+
 
 exten => 50,1,Goto(secretaire-context,${EXTEN},1)
 exten => 200,1,Goto(atelier-context,${EXTEN},1)
@@ -14,15 +15,13 @@ exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
 exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
 
 
-
 [secretaire-contexte]
-
 exten => 50,1,Dial(SIP/secretaire,20)
-exten => 50,2,VoiceMail(500@secretariatvm,u)
+exten => 50,2,VoiceMail(500@secretariatvm)
 exten => 50,3,Hangup
 
-exten => *50,1,VoiceMailMain(50@secretariatvm)
-exten => n,2,Hangup
+exten => 99,1,Answer()
+exten => 99,2,VoiceMailMain(50@secretariatvm)
 
 exten => 1,1,Goto(directeur-context,${EXTEN},1)
 exten => 200,1,Goto(atelier-context,${EXTEN},1)
@@ -31,48 +30,28 @@ exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
 exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
 
 
+[commerciaux-contexte]
+exten => 100,1,Dial(SIP/commercial,20)
+exten => 100,2,VoiceMail(100@commerciauxvm)
+exten => 100,3,Hangup
 
-[atelier-contexte]
-
-exten => 200,1,Dial(SIP/atelier,20)
-exten => 200,2,VoiceMail(200@ateliervm,u)
-exten => 200,3,Hangup
-
-exten => *200,1,VoiceMailMain(200@ateliervm)
-exten => n,2,Hangup
-
-exten => 50,1,Goto(secretaire-context,${EXTEN},1)
-exten => 50,1,Goto(secretaire-context,${EXTEN},1)
-exten => 250,1,Goto(hangar-context,${EXTEN},1)
-exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
-exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
-
-
-
-[hangar-contexte]
-
-exten => 250,1,Dial(SIP/hangar,20)
-exten => 250,2,VoiceMail(200@hangarvm,u)
-exten => 250,3,Hangup
-
-exten => *250,1,VoiceMailMain(200@hangarvm)
-exten => n,2,Hangup
+exten => 149,1,Answer()
+exten => 149,2,VoiceMailMain(100@commerciauxvm)
 
 exten => 50,1,Goto(secretaire-context,${EXTEN},1)
 exten => 50,1,Goto(secretaire-context,${EXTEN},1)
 exten => 200,1,Goto(atelier-context,${EXTEN},1)
+exten => 250,1,Goto(hangar-context,${EXTEN},1)
 exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
-exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
 
 
 [comptabilite-contexte]
-
 exten => 150,1,Dial(SIP/comptable,20)
-exten => 150,2,VoiceMail(250@comptabilitevm,u)
+exten => 150,2,VoiceMail(250@comptabilitevm)
 exten => 150,3,Hangup
 
-exten => *150,1,VoiceMailMain(250@comptabilitevm)
-exten => n,2,Hangup
+exten => 199,1,Answer()
+exten => 199,2,VoiceMailMain(250@comptabilitevm)
 
 exten => 50,1,Goto(secretaire-context,${EXTEN},1)
 exten => 50,1,Goto(secretaire-context,${EXTEN},1)
@@ -81,18 +60,31 @@ exten => 250,1,Goto(hangar-context,${EXTEN},1)
 exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
 
 
+[atelier-contexte]
+exten => 200,1,Dial(SIP/atelier,20)
+exten => 200,2,VoiceMail(200@ateliervm)
+exten => 200,3,Hangup
 
-[commerciaux-contexte]
+exten => 249,1,Answer()
+exten => 249,2,VoiceMailMain(200@ateliervm)
 
-exten => 100,1,Dial(SIP/commercial,20)
-exten => 100,2,VoiceMail(100@commerciauxvm,u)
-exten => 100,3,Hangup
+exten => 50,1,Goto(secretaire-context,${EXTEN},1)
+exten => 50,1,Goto(secretaire-context,${EXTEN},1)
+exten => 250,1,Goto(hangar-context,${EXTEN},1)
+exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
+exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
 
-exten => *100,1,VoiceMailMain(100@commerciauxvm)
-exten => n,2,Hangup
+
+[hangar-contexte]
+exten => 250,1,Dial(SIP/hangar,20)
+exten => 250,2,VoiceMail(200@hangarvm)
+exten => 250,3,Hangup
+
+exten => 299,1,Answer()
+exten => 299,2,VoiceMailMain(200@hangarvm)
 
 exten => 50,1,Goto(secretaire-context,${EXTEN},1)
 exten => 50,1,Goto(secretaire-context,${EXTEN},1)
 exten => 200,1,Goto(atelier-context,${EXTEN},1)
-exten => 250,1,Goto(hangar-context,${EXTEN},1)
 exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
+exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
