--- a/DMZ/VOIP/config/users.conf
+++ b/DMZ/VOIP/config/users.conf
@@ -21,6 +21,7 @@ allow=ulaw
 secret=coucou
 context=directeur-contexte
 transfer=yes
+mailbox = 1
 
 [50]
 username=secretaire
@@ -31,6 +32,7 @@ allow=ulaw
 secret=coucou
 context=secretaire-contexte
 transfer=yes
+mailbox = 50
 
 [100]
 username=commerciaux
@@ -41,6 +43,7 @@ allow=ulaw
 secret=coucou
 context=commerciaux-contexte
 transfer=yes
+mailbox = 100
 
 [150]
 username=comptabilite
@@ -51,6 +54,7 @@ allow=ulaw
 secret=coucou
 context=comptabilite-contexte
 transfer=yes
+mailbox = 150
 
 [200]
 username=atelier
@@ -61,6 +65,7 @@ allow=ulaw
 secret=coucou
 context=atelier-contexte
 transfer=yes
+mailox = 200
 
 [250]
 username=hangar
@@ -71,3 +76,4 @@ allow=ulaw
 secret=coucou
 context=hangar-contexte
 transfer=yes
+mailbox = 250
