--- a/DMZ/VOIP/config/voicemail.conf
+++ b/DMZ/VOIP/config/voicemail.conf
@@ -13,20 +13,20 @@ maxmsg=50
 sendvoicemail=yes     
 maxlogins=3     
 
-[secretariatvm]
-secretariat => [9876],secretariat
-
 [directeurvm]
-directeur => [9876],directeur
+directeur => 1,directeur
 
-[comptabilitevm]
-comptabilite => [9876],comptabilite
-
-[ateliervm]
-atelier => [9876],atelier
-
-[hangarvm]
-hangar => [9876],hangar
+[secretariatvm]
+secretariat => 50,secretariat
 
 [commerciauxvm]
-commerciaux => [9876],commerciaux
+commerciaux => 100,commerciaux
+
+[comptabilitevm]
+comptabilite => 150,comptabilite
+
+[ateliervm]
+atelier => 200,atelier
+
+[hangarvm]
+hangar => 250,hangar
