--- a/DMZ/VOIP/config/extensions.conf
+++ b/DMZ/VOIP/config/extensions.conf
@@ -8,11 +8,11 @@ exten => 2,1,Answer()
 exten => 2,2,VoiceMailMain(1@directeurvm)
 
 
-exten => 50,1,Goto(secretaire-context,${EXTEN},1)
-exten => 200,1,Goto(atelier-context,${EXTEN},1)
-exten => 250,1,Goto(hangar-context,${EXTEN},1)
+exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
+exten => 200,1,Goto(atelier-contexte,${EXTEN},1)
+exten => 250,1,Goto(hangar-contexte,${EXTEN},1)
 exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
-exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
+exten => 100,1,Goto(commerciaux-contexte,${EXTEN},1)
 
 
 [secretaire-contexte]
@@ -23,11 +23,11 @@ exten => 50,3,Hangup
 exten => 99,1,Answer()
 exten => 99,2,VoiceMailMain(50@secretariatvm)
 
-exten => 1,1,Goto(directeur-context,${EXTEN},1)
-exten => 200,1,Goto(atelier-context,${EXTEN},1)
-exten => 250,1,Goto(hangar-context,${EXTEN},1)
+exten => 1,1,Goto(directeur-contexte,${EXTEN},1)
+exten => 200,1,Goto(atelier-contexte,${EXTEN},1)
+exten => 250,1,Goto(hangar-contexte,${EXTEN},1)
 exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
-exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
+exten => 100,1,Goto(commerciaux-contexte,${EXTEN},1)
 
 
 [commerciaux-contexte]
@@ -38,10 +38,10 @@ exten => 100,3,Hangup
 exten => 149,1,Answer()
 exten => 149,2,VoiceMailMain(100@commerciauxvm)
 
-exten => 50,1,Goto(secretaire-context,${EXTEN},1)
-exten => 50,1,Goto(secretaire-context,${EXTEN},1)
-exten => 200,1,Goto(atelier-context,${EXTEN},1)
-exten => 250,1,Goto(hangar-context,${EXTEN},1)
+exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
+exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
+exten => 200,1,Goto(atelier-contexte,${EXTEN},1)
+exten => 250,1,Goto(hangar-contexte,${EXTEN},1)
 exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
 
 
@@ -53,11 +53,11 @@ exten => 150,3,Hangup
 exten => 199,1,Answer()
 exten => 199,2,VoiceMailMain(250@comptabilitevm)
 
-exten => 50,1,Goto(secretaire-context,${EXTEN},1)
-exten => 50,1,Goto(secretaire-context,${EXTEN},1)
-exten => 200,1,Goto(atelier-context,${EXTEN},1)
-exten => 250,1,Goto(hangar-context,${EXTEN},1)
-exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
+exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
+exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
+exten => 200,1,Goto(atelier-contexte,${EXTEN},1)
+exten => 250,1,Goto(hangar-contexte,${EXTEN},1)
+exten => 100,1,Goto(commerciaux-contexte,${EXTEN},1)
 
 
 [atelier-contexte]
@@ -68,11 +68,11 @@ exten => 200,3,Hangup
 exten => 249,1,Answer()
 exten => 249,2,VoiceMailMain(200@ateliervm)
 
-exten => 50,1,Goto(secretaire-context,${EXTEN},1)
-exten => 50,1,Goto(secretaire-context,${EXTEN},1)
-exten => 250,1,Goto(hangar-context,${EXTEN},1)
+exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
+exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
+exten => 250,1,Goto(hangar-contexte,${EXTEN},1)
 exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
-exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
+exten => 100,1,Goto(commerciaux-contexte,${EXTEN},1)
 
 
 [hangar-contexte]
@@ -83,8 +83,8 @@ exten => 250,3,Hangup
 exten => 299,1,Answer()
 exten => 299,2,VoiceMailMain(200@hangarvm)
 
-exten => 50,1,Goto(secretaire-context,${EXTEN},1)
-exten => 50,1,Goto(secretaire-context,${EXTEN},1)
-exten => 200,1,Goto(atelier-context,${EXTEN},1)
+exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
+exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
+exten => 200,1,Goto(atelier-contexte,${EXTEN},1)
 exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
-exten => 100,1,Goto(commerciaux-context,${EXTEN},1)
+exten => 100,1,Goto(commerciaux-contexte,${EXTEN},1)
