--- a/DMZ/VOIP/config/extensions.conf
+++ b/DMZ/VOIP/config/extensions.conf
@@ -1,4 +1,5 @@
 [directeur-contexte]
+
 exten => 1,1,Dial(SIP/directeur,20)
 exten => 1,2,VoiceMail(1@directeurvm,u)
 exten => 1,3,Hangup
@@ -8,15 +9,14 @@ exten => 2,1,Answer()
 exten => 2,2,VoiceMailMain(1@directeurvm)
 exten => 2,3,Hangup
 
-
 exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
+exten => 100,1,Goto(commerciaux-contexte,${EXTEN},1)
+exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
 exten => 200,1,Goto(atelier-contexte,${EXTEN},1)
 exten => 250,1,Goto(hangar-contexte,${EXTEN},1)
-exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
-exten => 100,1,Goto(commerciaux-contexte,${EXTEN},1)
-
 
 [secretaire-contexte]
+
 exten => 50,1,Dial(SIP/secretaire,20)
 exten => 50,2,VoiceMail(500@secretariatvm,u)
 exten => 50,3,Hangup
@@ -26,14 +26,15 @@ exten => 99,2,VoiceMailMain(50@secretariatvm)
 exten => 99,3,Hangup
 
 exten => 1,1,Goto(directeur-contexte,${EXTEN},1)
+exten => 100,1,Goto(commerciaux-contexte,${EXTEN},1)
+exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
 exten => 200,1,Goto(atelier-contexte,${EXTEN},1)
 exten => 250,1,Goto(hangar-contexte,${EXTEN},1)
-exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
-exten => 100,1,Goto(commerciaux-contexte,${EXTEN},1)
 
 
 [commerciaux-contexte]
-exten => 100,1,Dial(SIP/commercial,20)
+
+exten => 100,1,Dial(SIP/commerciaux,20)
 exten => 100,2,VoiceMail(100@commerciauxvm,u)
 exten => 100,3,Hangup
 
@@ -41,15 +42,16 @@ exten => 149,1,Answer()
 exten => 149,2,VoiceMailMain(100@commerciauxvm)
 exten => 149,3,Hangup
 
+exten => 1,1,Goto(secretaire-contexte,${EXTEN},1)
 exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
-exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
+exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
 exten => 200,1,Goto(atelier-contexte,${EXTEN},1)
 exten => 250,1,Goto(hangar-contexte,${EXTEN},1)
-exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
 
 
 [comptabilite-contexte]
-exten => 150,1,Dial(SIP/comptable,20)
+
+exten => 150,1,Dial(SIP/comptabilite,20)
 exten => 150,2,VoiceMail(250@comptabilitevm,u)
 exten => 150,3,Hangup
 
@@ -57,14 +59,15 @@ exten => 199,1,Answer()
 exten => 199,2,VoiceMailMain(250@comptabilitevm)
 exten => 199,3,Hangup
 
+exten => 1,1,Goto(secretaire-contexte,${EXTEN},1)
 exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
-exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
+exten => 100,1,Goto(commerciaux-contexte,${EXTEN},1)
 exten => 200,1,Goto(atelier-contexte,${EXTEN},1)
 exten => 250,1,Goto(hangar-contexte,${EXTEN},1)
-exten => 100,1,Goto(commerciaux-contexte,${EXTEN},1)
 
 
 [atelier-contexte]
+
 exten => 200,1,Dial(SIP/atelier,20)
 exten => 200,2,VoiceMail(200@ateliervm,u)
 exten => 200,3,Hangup
@@ -73,14 +76,15 @@ exten => 249,1,Answer()
 exten => 249,2,VoiceMailMain(200@ateliervm)
 exten => 249,3,Hangup
 
+exten => 1,1,Goto(secretaire-contexte,${EXTEN},1)
 exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
-exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
-exten => 250,1,Goto(hangar-contexte,${EXTEN},1)
-exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
 exten => 100,1,Goto(commerciaux-contexte,${EXTEN},1)
+exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
+exten => 250,1,Goto(hangar-contexte,${EXTEN},1)
 
 
 [hangar-contexte]
+
 exten => 250,1,Dial(SIP/hangar,20)
 exten => 250,2,VoiceMail(200@hangarvm,u)
 exten => 250,3,Hangup
@@ -89,8 +93,8 @@ exten => 299,1,Answer()
 exten => 299,2,VoiceMailMain(200@hangarvm)
 exten => 299,3,Hangup
 
+exten => 1,1,Goto(secretaire-contexte,${EXTEN},1)
 exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
-exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
-exten => 200,1,Goto(atelier-contexte,${EXTEN},1)
-exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
 exten => 100,1,Goto(commerciaux-contexte,${EXTEN},1)
+exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
+exten => 200,1,Goto(atelier-contexte,${EXTEN},1)
