--- a/DMZ/VOIP/config/users.conf
+++ b/DMZ/VOIP/config/users.conf
@@ -19,9 +19,10 @@ host=dynamic
 disallow=all
 allow=ulaw
 secret=coucou
+dtmfmode=rfc2833
 context=directeur-contexte
 transfer=yes
-mailbox = 2
+mailbox = 1
 
 [50]
 username=secretaire
@@ -32,7 +33,9 @@ allow=ulaw
 secret=coucou
 context=secretaire-contexte
 transfer=yes
-mailbox = 99
+mailbox = 50
+dtmfmode=rfc2833
+
 
 [100]
 username=commerciaux
@@ -42,8 +45,9 @@ disallow=all
 allow=ulaw
 secret=coucou
 context=commerciaux-contexte
-transfer=yes
-mailbox = 149
+mailbox = 100
+dtmfmode=rfc2833
+
 
 [150]
 username=comptabilite
@@ -53,8 +57,9 @@ disallow=all
 allow=ulaw
 secret=coucou
 context=comptabilite-contexte
-transfer=yes
-mailbox = 199
+mailbox = 150
+dtmfmode=rfc2833
+
 
 [200]
 username=atelier
@@ -64,8 +69,9 @@ disallow=all
 allow=ulaw
 secret=coucou
 context=atelier-contexte
-transfer=yes
-mailox = 249
+mailox = 200
+dtmfmode=rfc2833
+
 
 [250]
 username=hangar
@@ -75,5 +81,5 @@ disallow=all
 allow=ulaw
 secret=coucou
 context=hangar-contexte
-transfer=yes
-mailbox = 299
+mailbox = 250
+dtmfmode=rfc2833
