--- a/DMZ/VOIP/config/voicemail.conf
+++ b/DMZ/VOIP/config/voicemail.conf
@@ -14,19 +14,19 @@ sendvoicemail=yes
 maxlogins=3     
 
 [directeurvm]
-directeur => 1,directeur
+1 => 9876,directeur
 
 [secretariatvm]
-secretariat => 50,secretariat
+50 => 9876,secretariat
 
 [commerciauxvm]
-commerciaux => 100,commerciaux
+100 => 9876,commerciaux
 
 [comptabilitevm]
-comptabilite => 150,comptabilite
+150 => 9876,comptabilite
 
 [ateliervm]
-atelier => 200,atelier
+200 => 9876,atelier
 
 [hangarvm]
-hangar => 250,hangar
+250 => 9876,hangar
