--- a/DMZ/VOIP/config/extensions.conf
+++ b/DMZ/VOIP/config/extensions.conf
@@ -1,6 +1,6 @@
 [directeur-contexte]
 
-exten => 1,1,Dial(SIP/directeur,20)
+exten => 1,1,Dial(SIP/${EXTEN},20)
 exten => 1,2,VoiceMail(1@directeurvm,u)
 exten => 1,3,Hangup
 
@@ -16,7 +16,7 @@ exten => 250,1,Goto(hangar-contexte,${EXTEN},1)
 
 [secretaire-contexte]
 
-exten => 50,1,Dial(SIP/secretaire,20)
+exten => 50,1,Dial(SIP/${EXTEN},20)
 exten => 50,2,VoiceMail(50@secretariatvm,u)
 exten => 50,3,Hangup
 
@@ -32,7 +32,7 @@ exten => 250,1,Goto(hangar-contexte,${EXTEN},1)
 
 [commerciaux-contexte]
 
-exten => 100,1,Dial(SIP/commerciaux,20)
+exten => 100,1,Dial(SIP/${EXTEN},20)
 exten => 100,2,VoiceMail(100@commerciauxvm,u)
 exten => 100,3,Hangup
 
@@ -48,7 +48,7 @@ exten => 250,1,Goto(hangar-contexte,${EXTEN},1)
 
 [comptabilite-contexte]
 
-exten => 150,1,Dial(SIP/comptabilite,20)
+exten => 150,1,Dial(SIP/${EXTEN},20)
 exten => 150,2,VoiceMail(150@comptabilitevm,u)
 exten => 150,3,Hangup
 
@@ -64,7 +64,7 @@ exten => 250,1,Goto(hangar-contexte,${EXTEN},1)
 
 [atelier-contexte]
 
-exten => 200,1,Dial(SIP/atelier,20)
+exten => 200,1,Dial(SIP/${EXTEN},20)
 exten => 200,2,VoiceMail(200@ateliervm,u)
 exten => 200,3,Hangup
 
@@ -80,7 +80,7 @@ exten => 250,1,Goto(hangar-contexte,${EXTEN},1)
 
 [hangar-contexte]
 
-exten => 250,1,Dial(SIP/hangar,20)
+exten => 250,1,Dial(SIP/${EXTEN},20)
 exten => 250,2,VoiceMail(250@hangarvm,u)
 exten => 250,3,Hangup
 
