--- a/Trusted Zone/Services interne/docker-compose.yml
+++ b/Trusted Zone/Services interne/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - ./resolver/named.conf:/etc/bind/named.conf
     container_name: resolver_container
 
-  soa_interne:
+  SOA_interne:
     build:
       context: ./soa_interne
       dockerfile: Dockerfile
@@ -29,7 +29,7 @@ services:
 
     container_name: soa_interne_container
 
-  samba:
+  Samba:
     build:
       context: ./samba
       dockerfile: Dockerfile
