--- a/Trusted Zone/Services interne/docker-compose.yml
+++ b/Trusted Zone/Services interne/docker-compose.yml
@@ -15,7 +15,7 @@ networks:
       config:
         - subnet: 192.168.5.0/24
           gateway: 192.168.5.1
-  atelier_network:
+  secretaire_network:
     # use a custom driver, with no options
     ipam:
       driver: default
@@ -29,14 +29,14 @@ networks:
       config:
         - subnet: 192.168.2.0/24
           gateway: 192.168.2.1
-  commerciaux_network:
+  direction_network:
     # use a custom driver, with no options
     ipam:
       driver: default
       config:
         - subnet: 192.168.3.0/24
           gateway: 192.168.3.1
-  secretaire_network:
+  atelier_network:
     # use a custom driver, with no options
     ipam:
       driver: default
