refonte service interne

--- a/Trusted Zone/Services interne/intranet/Dockerfile
+++ b/Trusted Zone/Services interne/intranet/Dockerfile
@@ -1,20 +1,15 @@
+# Choix image
 FROM php:8.0-apache
 
+# Installation des outils nécessaire
 RUN apt-get update -y
-RUN apt-get install -y iputils-ping
-RUN apt-get install -y dnsutils
-RUN apt-get install -y lynx
-RUN apt-get install -y net-tools
-RUN apt-get install nano
-
-
+RUN apt-get install iputils-ping dnsutils lynx net-tools nano -y
 RUN docker-php-ext-install mysqli pdo pdo_mysql
 
-
+# Copie des fichier de config
 COPY index.php /var/www/html/index.php
 COPY intranet.conf /etc/apache2/sites-available/intranet.conf
 
+# activer server apache
 RUN a2dissite 000-default.conf
 RUN a2ensite intranet.conf
-
-CMD tail -f /dev/null
