--- a/Trusted Zone/Services interne/resolver/named.conf
+++ b/Trusted Zone/Services interne/resolver/named.conf
@@ -24,22 +24,6 @@ options {
 
 };
 
-//EXTERNE
-zone "l2-2.ephec-ti.be." IN {
-        type forward;
-        forwarders { 179.96.231.177; };
-        forward only;
-};
-
-//INTERNE
-zone "intranet.woodytoys" IN{
-        type forward;
-        forwarders { 179.96.231.178; };
-        forward only;
-
-};
-
-
 //DEFAULT
 zone "." IN {
         type hint;
@@ -60,23 +44,24 @@ zone "127.in-addr.arpa" IN {
         notify no;
 };
 
-logging {
-        channel "misc" {
-            file "/var/log/named/misc.log" versions 4 size 4m;
-            print-time YES;
-            print-severity YES;
-            print-category YES;
-        };
-        channel "query" {
-            file "/var/log/named/query.log" versions 4 size 4m;
-            print-time YES;
-            print-severity NO;
-            print-category NO;
-        };
-        category default {
-            "misc";
-        };
-        category queries {
-            "query";
-        };
+//INTERNE
+zone "intranet.woodytoys" IN{
+        type forward;
+        forwarders { 192.168.0.1; };
+        forward only;
+
 };
+
+zone "0.168.192.in-addr.arpa" IN {
+    type forward;
+    forwarders { 192.168.0.1; };
+    forward only;
+};
+
+//EXTERNE
+zone "l2-2.ephec-ti.be." IN {
+        type forward;
+        forwarders { 179.96.231.177; };
+        forward only;
+};
+
