--- a/Trusted Zone/Services interne/intranet/intranet.conf
+++ b/Trusted Zone/Services interne/intranet/intranet.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
 
         ServerAdmin root.l2-2.ephec-ti.be.
-        ServerName intranet.woodytoys
+        ServerName localhost
         ServerAlias www.intranet.woodytoys
         DocumentRoot /var/www/html
         ErrorLog ${APACHE_LOG_DIR}/error.log
