--- a/Trusted Zone/Services interne/soa_interne/named.conf
+++ b/Trusted Zone/Services interne/soa_interne/named.conf
@@ -2,7 +2,7 @@ options {
         directory "/etc/bind";
 
         listen-on { any; };
-        listen-on-v6 { none; };
+        listen-on-v6 { any; };
 
         allow-query {
         192.168.0.0/24; // LocalNetwork
@@ -19,6 +19,9 @@ options {
         pid-file "/var/run/named/named.pid";
         allow-recursion { none; };
         recursion no;
+
+    dnssec-enable yes;
+	dnssec-validation yes;
 };
 
 zone "intranet.woodytoys" IN {
