--- a/Trusted Zone/Services interne/resolver/named.conf
+++ b/Trusted Zone/Services interne/resolver/named.conf
@@ -12,10 +12,10 @@ options {
 
         // Configure the IPs to listen on here.
         listen-on { any; };
-        listen-on-v6 { none; };
+        listen-on-v6 { any; };
         forwarders{
                 8.8.8.8;
-                192.168.1.1; //secretaire
+                192.168.3.2; //directeur
 
         };
 
