--- a/Trusted Zone/Services interne/docker-compose.yml
+++ b/Trusted Zone/Services interne/docker-compose.yml
@@ -1,134 +1,3 @@
-# version: "2.2" # optional since v1.27.0
-# services:
-#   resolver:
-#     build:
-#       context: ./resolver
-#       dockerfile: Dockerfile
-#     networks:
-#       local_network:
-#         ipv4_address: 192.168.0.5
-#     volumes:
-#       - ./resolver/named.conf:/etc/bind/named.conf
-#     container_name: resolver_container
-
-#   soa_interne:
-#     build:
-#       context: ./soa_interne
-#       dockerfile: Dockerfile
-
-#     networks:
-#       local_network:
-#         ipv4_address: 192.168.0.1
-#     ports:
-#       - "172.17.0.1:53:53/tcp"
-#       - "172.17.0.1:53:53/udp"
-#       - "10000:10000/tcp"
-#     volumes:
-#       - ./soa_interne/named.conf:/etc/bind/named.conf
-#       - ./soa_interne/db.intranet.woody:/etc/bind/db.intranet.woody
-
-#     container_name: soa_interne_container
-
-#   samba:
-#     build:
-#       context: ./samba
-#       dockerfile: Dockerfile
-#     networks:
-#       local_network:
-#         ipv4_address: 192.168.0.4
-#     ports:
-#       - "139:139"
-#     container_name: samba_container
-
-#   direction:
-#     build:
-#       context: ./user/direction
-#       dockerfile: Dockerfile
-#     networks:
-#       direction_network:
-#         ipv4_address: 192.168.3.2
-#     container_name: direction_container
-
-#   atelier:
-#     build:
-#       context: ./user/atelier
-#       dockerfile: Dockerfile
-#     networks:
-#       atelier_network:
-#         ipv4_address: 192.168.4.2
-#     container_name: atelier_container
-
-#   compta:
-#     build:
-#       context: ./user/compta
-#       dockerfile: Dockerfile
-#     networks:
-#       compta_network:
-#         ipv4_address: 192.168.2.2
-#     container_name: compta_container
-
-#   secretariat:
-#     build:
-#       context: ./user/secretariat
-#       dockerfile: Dockerfile
-#     networks:
-#       secretaire_network:
-#         ipv4_address: 192.168.1.2
-#     container_name: secretaire_container
-
-#   intranet_woody:
-#       build:
-#         context: ./intranet
-#         dockerfile: Dockerfile
-
-#       networks:
-#         local_network:
-#           ipv4_address: 192.168.0.3
-#       ports:
-#         - "8080:80"
-#       volumes:
-#         - ./intranet/intranet.conf:/etc/apache2/sites-available/intranet.conf
-#         - ./intranet/index.php:/var/www/html/index.php
-#       container_name: intranet_container
-
-# networks:
-#   local_network:
-#     # use the bridge driver, but enable IPv6
-#     ipam:
-#       driver: default
-#       config:
-#         - subnet: 192.168.0.0/24
-#           gateway: 192.168.0.1
-#   secretaire_network:
-#     # use a custom driver, with no options
-#     ipam:
-#       driver: default
-#       config:
-#         - subnet: 192.168.1.0/24
-#           gateway: 192.168.1.1
-#   compta_network:
-#     # use a custom driver, with no options
-#     ipam:
-#       driver: default
-#       config:
-#         - subnet: 192.168.2.0/24
-#           gateway: 192.168.2.1
-#   direction_network:
-#     # use a custom driver, with no options
-#     ipam:
-#       driver: default
-#       config:
-#         - subnet: 192.168.3.0/24
-#           gateway: 192.168.3.1
-#   atelier_network:
-#     # use a custom driver, with no options
-#     ipam:
-#       driver: default
-#       config:
-#         - subnet: 192.168.4.0/24
-#           gateway: 192.168.4.1
-
-
 version: "2.2"
 
 services:
@@ -189,8 +58,8 @@ services:
       context: ./user/compta
       dockerfile: Dockerfile
     networks:
-      net_Compta:
-        ipv4_address: 192.168.2.2
+      local_network:
+        ipv4_address: 192.168.0.102
     container_name: compta
 
   direction:
@@ -198,8 +67,8 @@ services:
       context: ./user/direction
       dockerfile: Dockerfile
     networks:
-      net_Direction:
-        ipv4_address: 192.168.3.2
+      local_network:
+        ipv4_address: 192.168.0.103
     container_name: direction
 
   atelier:
@@ -207,8 +76,8 @@ services:
       context: ./user/atelier
       dockerfile: Dockerfile
     networks:
-      net_Atelier:
-        ipv4_address: 192.168.4.2
+      local_network:
+        ipv4_address: 192.168.0.104
     container_name: atelier
 
 networks:
