--- a/Trusted Zone/Services interne/soa_interne/Dockerfile
+++ b/Trusted Zone/Services interne/soa_interne/Dockerfile
@@ -2,8 +2,8 @@ FROM ubuntu:latest
 
 RUN apt update && apt upgrade -y
 RUN apt install bind9 bind9utils dnsutils net-tools nano -y 
-RUN iputils-ping
-RUN apt-install wget
+RUN apt-get install -y iputils-ping
+RUN apt-install wget -y
 
 COPY named.conf /etc/bind/named.conf
 COPY db.intranet.woodytoys /etc/bind/db.intranet.woodytoys
