--- a/Trusted Zone/Services interne/soa_interne/Dockerfile
+++ b/Trusted Zone/Services interne/soa_interne/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:latest
 RUN apt update && apt upgrade -y
 RUN apt install bind9 bind9utils dnsutils net-tools nano -y 
 RUN apt-get install -y iputils-ping
-RUN apt-install wget -y
+RUN apt install wget -y
 
 COPY named.conf /etc/bind/named.conf
 COPY db.intranet.woodytoys /etc/bind/db.intranet.woodytoys
