--- a/Trusted Zone/Services interne/user/secretariat/Dockerfile
+++ b/Trusted Zone/Services interne/user/secretariat/Dockerfile
@@ -8,8 +8,8 @@ RUN apt-get install -y iputils-ping
 RUN apt-get install -y net-tools
 RUN apt-get install -y nano
 RUN apt install wget -y
-
- 
+RUN apt install lynx -y
+RUN apt install lynx -y
 
 
 CMD tail -f /dev/null
