--- a/DMZ/SOA-externe-dnssec/Dockerfile
+++ b/DMZ/SOA-externe-dnssec/Dockerfile
@@ -1,5 +1,5 @@
 # image à partir d'ubuntu 20.04
-FROM ubuntu:local
+FROM ubuntu:focal
 
 # Mettre à jour tous les packets
 RUN apt update && apt upgrade -y
