--- a/Trusted Zone/Services interne/user/compta/Dockerfile
+++ b/Trusted Zone/Services interne/user/compta/Dockerfile
@@ -8,6 +8,7 @@ RUN apt-get install -y iputils-ping
 RUN apt-get install -y net-tools
 RUN apt-get install -y nano
 RUN apt install wget -y
+RUN apt install -y smbclient
 
 
 CMD tail -f /dev/null
