--- a/Trusted Zone/Services interne/user/direction/Dockerfile
+++ b/Trusted Zone/Services interne/user/direction/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get install -y net-tools
 RUN apt-get install -y nano
 RUN apt install wget -y
 RUN apt install lynx -y
+RUN apt install -y smbclient
 
 
 CMD tail -f /dev/null
