--- a/Trusted Zone/Services interne/user/secretariat/Dockerfile
+++ b/Trusted Zone/Services interne/user/secretariat/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get install -y nano
 RUN apt install wget -y
 RUN apt install lynx -y
 RUN apt install lynx -y
+RUN apt install -y smbclient
 
 
 CMD tail -f /dev/null
