--- a/DMZ/VOIP/config/extensions.conf
+++ b/DMZ/VOIP/config/extensions.conf
@@ -39,7 +39,7 @@ exten => 100,3,Hangup
 exten => 149,1,VoiceMailMain(100@commerciauxvm)
 exten => 149,2,Hangup
 
-exten => 1,1,Goto(secretaire-contexte,${EXTEN},1)
+exten => 1,1,Goto(secretaire-contexte,50,1)
 exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
 exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
 exten => 200,1,Goto(atelier-contexte,${EXTEN},1)
@@ -55,7 +55,7 @@ exten => 150,3,Hangup
 exten => 199,1,VoiceMailMain(150@comptabilitevm)
 exten => 199,2,Hangup
 
-exten => 1,1,Goto(secretaire-contexte,${EXTEN},1)
+exten => 1,1,Goto(secretaire-contexte,50,1)
 exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
 exten => 100,1,Goto(commerciaux-contexte,${EXTEN},1)
 exten => 200,1,Goto(atelier-contexte,${EXTEN},1)
@@ -71,7 +71,7 @@ exten => 200,3,Hangup
 exten => 249,1,VoiceMailMain(200@ateliervm)
 exten => 249,2,Hangup
 
-exten => 1,1,Goto(secretaire-contexte,${EXTEN},1)
+exten => 1,1,Goto(secretaire-contexte,50,1)
 exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
 exten => 100,1,Goto(commerciaux-contexte,${EXTEN},1)
 exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
@@ -87,7 +87,7 @@ exten => 250,3,Hangup
 exten => 299,1,VoiceMailMain(250@hangarvm)
 exten => 299,2,Hangup
 
-exten => 1,1,Goto(secretaire-contexte,${EXTEN},1)
+exten => 1,1,Goto(secretaire-contexte,50,1)
 exten => 50,1,Goto(secretaire-contexte,${EXTEN},1)
 exten => 100,1,Goto(commerciaux-contexte,${EXTEN},1)
 exten => 150,1,Goto(comptabilite-contexte,${EXTEN},1)
