--- a/DMZ/SOA-externe/Dockerfile
+++ b/DMZ/SOA-externe/Dockerfile
@@ -6,6 +6,13 @@ RUN apt update && apt upgrade -y
 # Installer bind et autres programme utile
 RUN apt install bind9 bind9utils dnsutils net-tools vim iputils-ping -y
 
+RUN apt install -y nano
+RUN apt install -y systemctl
+
+# Création du dossier keys
+RUN mkdir /etc/bind/keys
+
+
 COPY named.conf /etc/bind
 COPY named.conf.local /etc/bind
 COPY named.conf.options /etc/bind
@@ -16,5 +23,4 @@ EXPOSE 953
 
 # lancer la config bind
 CMD named -g
-
 
