Change folder name ServicesInternes && expose ports of intranet instead of bind them to host

--- a/DMZ/Mail/Dockerfile
+++ b/DMZ/Mail/Dockerfile
@@ -2,7 +2,5 @@ FROM ubuntu:focal
 
 RUN apt update && apt upgrade -y
 # install postfix
-RUN apt install postfix dovecot vim net-tools mailutils mutt telnet -y
+RUN apt install postfix dovecot-core dovecot-pop3d dovecot-imapd vim net-tools mailutils mutt telnet -y
 
-EXPOSE 25
-EXPOSE 143
