--- a/Trusted Zone/docker-compose.yml
+++ b/Trusted Zone/docker-compose.yml
@@ -1,6 +1,20 @@
 version: '3.3'
-    
+
+
 services:
+
+  database:
+    image: mysql:latest
+    volumes:
+      - ./database/:/docker-entrypoint-initdb.d/
+    command: --default-authentication-plugin=mysql_native_password
+    ports:
+      - 3306:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: Password
+      MYSQL_USER: website
+      MYSQL_PASSWORD: Password
+    container_name: database
 
   resolver:
     build:
